--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
         html {
             scroll-behavior: smooth;
         }
+        /* Custom spinner for loading state */
+        .spinner {
+            border: 4px solid rgba(0, 0, 0, 0.1);
+            border-left-color: #3b82f6;
+            border-radius: 50%;
+            width: 24px;
+            height: 24px;
+            animation: spin 1s linear infinite;
+            display: inline-block;
+            vertical-align: middle;
+            margin-right: 8px;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
     </style>
 </head>
 <body class="text-gray-800">
@@ -46,6 +62,7 @@
                     <li><a href="#tentang-kami" class="hover:text-blue-200 transition duration-300">Tentang Kami</a></li>
                     <li><a href="#kepengurusan" class="hover:text-blue-200 transition duration-300">Kepengurusan</a></li>
                     <li><a href="#program" class="hover:text-blue-200 transition duration-300">Program</a></li>
+                    <li><a href="#form-pengajuan" class="hover:text-blue-200 transition duration-300">Form Pengajuan</a></li>
                     <li><a href="#kontak" class="hover:text-blue-200 transition duration-300">Kontak</a></li>
                 </ul>
             </nav>
@@ -174,12 +191,52 @@
         </div>
     </section>
 
+    <!-- Form Submission Section -->
+    <section id="form-pengajuan" class="py-16 px-6 md:px-12 bg-gray-100">
+        <div class="container mx-auto">
+            <h3 class="text-3xl font-bold text-center mb-10 section-title mx-auto">Formulir Pengajuan</h3>
+            <div class="bg-white rounded-lg shadow-lg p-8 max-w-2xl mx-auto">
+                <form id="submissionForm" class="space-y-6">
+                    <div>
+                        <label for="namaPengaju" class="block text-lg font-medium text-gray-700 mb-2">Nama Pengaju:</label>
+                        <input type="text" id="namaPengaju" name="namaPengaju" required
+                               class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-lg">
+                    </div>
+                    <div>
+                        <label for="blok" class="block text-lg font-medium text-gray-700 mb-2">Blok:</label>
+                        <select id="blok" name="blok" required
+                                class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-lg">
+                            <option value="">Pilih Blok</option>
+                            <option value="A1">A1</option><option value="A2">A2</option><option value="A3">A3</option><option value="A4">A4</option><option value="A5">A5</option><option value="A6">A6</option><option value="A7">A7</option><option value="A8">A8</option><option value="A9">A9</option><option value="A10">A10</option><option value="A12">A12</option><option value="A12a">A12a</option><option value="A14">A14</option><option value="A15">A15</option><option value="A16">A16</option><option value="A17">A17</option><option value="A18">A18</option><option value="A19">A19</option><option value="A20">A20</option><option value="A21">A21</option><option value="A22">A22</option><option value="B1">B1</option><option value="B4">B4</option><option value="B6">B6</option><option value="B8">B8</option><option value="B9">B9</option><option value="B10">B10</option><option value="B11">B11</option><option value="B12">B12</option><option value="B14">B14</option><option value="B15">B15</option><option value="B16">B16</option><option value="B17">B17</option><option value="B18">B18</option><option value="B19">B19</option><option value="B20">B20</option><option value="B21">B21</option><option value="B22">B22</option><option value="B23">B23</option><option value="B24">B24</option><option value="B27">B27</option><option value="C1">C1</option><option value="C2">C2</option><option value="C15">C15</option><option value="D5">D5</option><option value="D12">D12</option><option value="E2">E2</option><option value="E5">E5</option><option value="E6">E6</option><option value="E11">E11</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="nominal" class="block text-lg font-medium text-gray-700 mb-2">Nominal (Rp):</label>
+                        <input type="number" id="nominal" name="nominal" required min="0"
+                               class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-lg">
+                    </div>
+                    <div>
+                        <label for="keterangan" class="block text-lg font-medium text-gray-700 mb-2">Keterangan:</label>
+                        <textarea id="keterangan" name="keterangan" rows="4" required
+                                  class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-lg"></textarea>
+                    </div>
+                    <button type="submit" id="submitButton"
+                            class="w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-sm text-lg font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition duration-300 transform hover:scale-105">
+                        <span id="buttonText">Kirim Pengajuan</span>
+                        <div id="loadingSpinner" class="spinner hidden"></div>
+                    </button>
+                    <div id="formMessage" class="mt-4 text-center text-lg font-medium"></div>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
-    <section id="kontak" class="py-16 px-6 md:px-12 bg-gray-100">
+    <section id="kontak" class="py-16 px-6 md:px-12 bg-white">
         <div class="container mx-auto">
             <h3 class="text-3xl font-bold text-center mb-10 section-title mx-auto">Kontak Kami</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
-                <div class="bg-white rounded-lg shadow-md p-8">
+                <div class="bg-gray-50 rounded-lg shadow-md p-8">
                     <p class="text-lg mb-4"><strong class="text-blue-600">Alamat:</strong> Jl. Melati No. 123, RT 04 RW 05, Desa Jagabaya, Kecamatan Cimaung, Kabupaten Bandung, Jawa Barat</p>
                     <p class="text-lg mb-4"><strong class="text-blue-600">Email:</strong> rt04rw05.jagabaya@email.com</p>
                     <p class="text-lg mb-4"><strong class="text-blue-600">Telepon Ketua RT:</strong> 0812-3456-7890</p>
@@ -214,5 +271,60 @@
         </div>
     </footer>
 
+    <script>
+        // Ganti URL_APPS_SCRIPT_ANDA dengan URL Aplikasi Web yang Anda dapatkan dari Langkah 1
+        const GOOGLE_APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyzq19S3u3nOzimYfQybJ6iGxT6xaEGZRYuNuEydzRJTtGDQwR3nm7QZQeBqRO2r_3JZg/exec"; // <--- PENTING: GANTI INI!
+
+        document.getElementById('submissionForm').addEventListener('submit', async function(event) {
+            event.preventDefault(); // Mencegah pengiriman formulir default
+
+            const submitButton = document.getElementById('submitButton');
+            const buttonText = document.getElementById('buttonText');
+            const loadingSpinner = document.getElementById('loadingSpinner');
+            const formMessage = document.getElementById('formMessage');
+
+            // Tampilkan spinner dan nonaktifkan tombol
+            buttonText.textContent = 'Mengirim...';
+            loadingSpinner.classList.remove('hidden');
+            submitButton.disabled = true;
+            formMessage.textContent = ''; // Hapus pesan sebelumnya
+
+            const formData = new FormData(this);
+            const data = {};
+            for (let [key, value] of formData.entries()) {
+                data[key] = value;
+            }
+
+            try {
+                const response = await fetch(GOOGLE_APPS_SCRIPT_URL, {
+                    method: 'POST',
+                    mode: 'no-cors', // Penting untuk menghindari masalah CORS dengan Google Apps Script
+                    headers: {
+                        'Content-Type': 'application/x-www-form-urlencoded',
+                    },
+                    body: new URLSearchParams(data).toString(),
+                });
+
+                // Karena mode 'no-cors', kita tidak bisa membaca response.json() secara langsung.
+                // Kita asumsikan sukses jika tidak ada error jaringan.
+                // Untuk konfirmasi yang lebih kuat, Anda bisa mengarahkan ke halaman sukses atau
+                // memeriksa respons di sisi Google Sheet.
+
+                formMessage.textContent = 'Pengajuan berhasil dikirim!';
+                formMessage.className = 'mt-4 text-center text-lg font-medium text-green-600';
+                this.reset(); // Reset formulir setelah sukses
+
+            } catch (error) {
+                console.error('Error submitting form:', error);
+                formMessage.textContent = 'Terjadi kesalahan saat mengirim pengajuan. Silakan coba lagi.';
+                formMessage.className = 'mt-4 text-center text-lg font-medium text-red-600';
+            } finally {
+                // Sembunyikan spinner dan aktifkan kembali tombol
+                buttonText.textContent = 'Kirim Pengajuan';
+                loadingSpinner.classList.add('hidden');
+                submitButton.disabled = false;
+            }
+        });
+    </script>
 </body>
 </html>
