Update Google Apps Script URL format for form submission

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             const formMessage = document.getElementById('formMessage');
 
             // URL Google Apps Script Anda (WAJIB DIGANTI!)
-            const GOOGLE_APPS_SCRIPT_URL = 'AKfycbyzq19S3u3nOzimYfQybJ6iGxT6xaEGZRYuNuEydzRJTtGDQwR3nm7QZQeBqRO2r_3JZg'; 
+            const GOOGLE_APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyzq19S3u3nOzimYfQybJ6iGxT6xaEGZRYuNuEydzRJTtGDQwR3nm7QZQeBqRO2r_3JZg/exec'; 
 
             // Tampilkan loading spinner dan nonaktifkan tombol
             submitButton.disabled = true;
