Update Google Apps Script URL format for consistency

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             const formMessage = document.getElementById('formMessage');
 
             // URL Google Apps Script Anda (WAJIB DIGANTI!)
-            const GOOGLE_APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxZTTwlWf_bMsn4lCTd7PQJ7BIyFWLrCboN2MvKU6lxP-uGb9tFnDGEWB47_53BCbLmxg/exec";
+            const GOOGLE_APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxZTTwlWf_bMsn4lCTd7PQJ7BIyFWLrCboN2MvKU6lxP-uGb9tFnDGEWB47_53BCbLmxg/exec';
 
             // Tampilkan loading spinner dan nonaktifkan tombol
             submitButton.disabled = true;
